2001-02-27  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    At  smtp_sync()  when running in PIPELINING, if the
	    MAIL FROM has produced 400 or 500 series response,
	    do fault the RCPT TO responses in every case.
	    (With EX_UNAVAILABLE for 500-series, not EX_TEMPFAIL.)

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Track Z_read() return errno code more properly to
	    the 'Session closed w/o QUIT' log report.
	    Case where this was needed was actually some firewall
	    product which f**d OUTBOUND SMTP session of raporter...

2001-02-26  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* utils/listexpand.c, transports/smtp/smtp.c, include/ta.h,
	  transports/libta/ctlopen.c:
	    Implemented "EZMLM-alike" listexpander which does
	    the envelope MAIL FROM address content rewrite at
	    tne outgoing SMTP session.  This is done with 'DSN'
	    dataentry  EZMLM=  which is presumed to have valid
	    stuff to be appended to the localpart of the address
	    envelope:  '+recipient=40address.dom', for example.

	    When compared with more classical approach, this does
	    message routing in system-friendly way, and only changes
	    the output stage slightly.  (At classical case the message
	    is expanded for each recipient, say 3000 copies of 60 kB
	    each..  This mechanism is way faster.)

2001-02-24  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpcmds.c:
	    Make RCPT TO synchronous router reporting to be a copy
	    of MAIL FROM one -- report things correctly, that is.

2001-02-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* router/rfc822.c, router/rtsyslog.c:
	    Added the time to process the message to the router syslog
	    report.  Both 'delay' and 'xdelay' just like at the TA's.
	    'delay' is time from message injection to routing completion,
	    'xdelay' is the time spent at the routing.

	* utils/listexpand.c, utils/Makefile.in: