@@ -1,3 +1,10 @@
+2001-03-01  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* scheduler/mailq.c:
+	    Embarassing uninitialized array elements used for checking
+	    if loop ends - Tomasz Bojakowski <mad@devil.inside.pin.pl>
+	    reported errors.
+
 2001-02-27  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* transports/smtp/smtp.c:
